--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>자전23 이서영</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
