[asset] assets.dir 생성 및 기존 이미지 dir 위치 이동

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-		<img src="me.jpg" alt="증명사진" width="200">
+		<img src="assets/me.jpg" alt="증명사진" width="200">
 		<h1 id="name">이서영</h1>
 		<p id="major">자유전공학부 23학번</p>
   </header>
