[feat] 이미지를 랜덤으로 변경하는 btn 추가

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   <header>
-		<img src="assets/me.jpg" alt="증명사진" width="200">
+		<button id="changeBtn">랜덤 이미지</button>
+		<br>
+		<img id="randomImg" src="assets/0.jpg" alt="이서영 사진" width="200">
 		<h1 id="name">이서영</h1>
 		<p id="major">자유전공학부 23학번</p>
   </header>
